# ipc_python_cpp_sql

./: .gitlab-ci.yml  readme.md
prj/: .gitignore  readme.txt
prj/ci/docker/: qt6.4.2_mysql8_ubuntu20.04.df
prj/cpp/: .gitignore  CMakeLists.txt  build.sh  db_init.sh  my_vars.sh  run-clang-tidy.py  test.sh
prj/cpp/src/: CMakeLists.txt  main.cpp  my_net.cpp  my_net.h  my_parse_result.h  my_parser.cpp  my_parser.h  my_store.h  my_store_db.cpp  my_store_db.h  my_store_file.h  my_store_mem.h
prj/cpp/tests/: CMakeLists.txt  my_math.cpp  my_math.h  my_sql_test.cpp  my_sql_test.h  my_store_file.cpp  my_store_file.h  my_store_mem.cpp  my_store_mem.h  my_tests.cpp  my_tests.h
prj/python/prj/: .gitignore  pip_reqs.txt  pip_reqs_down.cmd  pip_reqs_down.sh  pip_reqs_export.cmd  pip_reqs_export.sh  pip_reqs_install.cmd  pip_reqs_install.sh  venv_create.cmd  venv_create.sh
prj/python/src/: _client.py  _man_file.py  main.py
prj/python/test/: test__client.py
